--- a/config/database.yml
+++ b/config/database.yml
@@ -8,13 +8,12 @@ development:
   username: root
   password:
   host: localhost
-
+  
 production:
-  adapter: mysql
+  adapter: mysql2
   encoding: utf8
-  reconnect: false
-  database: pagerank-test_production
+  database: pagerank_production
   pool: 5
-  username: root
-  password: 
-  host: localhost
+  host: 10.0.1.101
+  username: bingo
+  password: db
